2007-03-07  Andrew Haley  <aph@redhat.com>

	* libgcj_bc.c (JvRunMainName): Declare.

2007-03-07  Gary Benson  <gbenson@redhat.com>

	* sources.am, Makefile.in: Rebuilt.

2007-03-06  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (bin_PROGRAMS): Added gcjh.
	(gcjh_SOURCES, gcjh_LDFLAGS, gcjh_LINK, gcjh_LDADD,
	gcjh_DEPENDENCIES): New variables.

2007-03-05  Mark Wielaard  <mark@klomp.org>

	* java/lang/Character.java: Re-merged with Classpath.
	* java/lang/natString.cc (nativeCompareTo): Renamed from
	compareTo.
	* java/lang/StringBuilder.java: Re-merged with Classpath.
	* java/lang/String.java: Re-merged with Classpath.
	(nativeCompareTo): Renamed from compareTo.
	* java/lang/StringBuffer.java: Re-merged with Classpath.
	* jni.cc (_Jv_JNI_GetAnyMethodID): Split calls to append.

2007-03-05  Andrew Haley  <aph@redhat.com>

	* java/lang/reflect/natVMProxy.cc (ncode_closure.meth): Delete.
	(generateProxyClass): Don't pass method to ncode.
	(run_proxy): Call _Jv_GetReflectedMethod to find the proxy method.
	* java/lang/reflect/Method.h: Rebuild.
	* java/lang/reflect/Method.java (internalGetParameterTypes,
	internalGetExceptionTypes): New methods.
	* headers.txt (class java/lang/reflect/Method): Declare
	_Jv_GetReflectedMethod.  Be its friend.
	* java/lang/natClass.cc (_Jv_GetReflectedMethod): New method.
	* java/lang/Class.h: Declare it.  Be its friend.

2007-03-03  Andrew Haley  <aph@redhat.com>

	* java/lang/natClass.cc (parseAnnotationElement): Correct long
	annotations to read JV_CONSTANT_Long, not JV_CONSTANT_Double.

2007-03-02  Andrew Haley  <aph@redhat.com>

	* sun/reflect/annotation/AnnotationInvocationHandler.java:
	Generify in a few places.
	(equals): Rewrite to use invoke on local proxy.
	(deepToString): Remove most of it.
	(toString): Make nonstatic.
	(arrayClone): Delete.
	(coerce): New method.
	(invoke): Rewrite to handle gcj's structures correctly.
	* java/lang/natClass.cc (getDeclaredAnnotations): Fix test for
	null loader.