@@ -8870,10 +8870,4 @@ property_files = \
   classpath/resource/META-INF/services/javax.sound.midi.spi.MidiDeviceProvider \
   classpath/resource/META-INF/services/javax.sound.midi.spi.MidiFileReader \
   classpath/resource/META-INF/services/javax.sound.midi.spi.MidiFileWriter \
-  classpath/resource/META-INF/services/javax.sound.sampled.spi.AudioFileReader \
-  classpath/resource/META-INF/services/javax.xml.parsers.DocumentBuilderFactory \
-  classpath/resource/META-INF/services/javax.xml.parsers.SAXParserFactory \
-  classpath/resource/META-INF/services/javax.xml.parsers.TransformerFactory \
-  classpath/resource/META-INF/services/org.relaxng.datatype.DatatypeLibraryFactory \
-  classpath/resource/META-INF/services/org.w3c.dom.DOMImplementationSourceList \
-  classpath/resource/META-INF/services/org.xml.sax.driver
+  classpath/resource/META-INF/services/javax.sound.sampled.spi.AudioFileReader
