@@ -1,3 +1,10 @@
+2007-03-09  Tom Tromey  <tromey@redhat.com>
+
+	* sources.am, Makefile.in: Rebuilt.
+	* scripts/makemake.tcl (scan_directory): Allow service files to be
+	omitted.
+	Omit all XML-related service files.
+
 2007-03-07  Andrew Haley  <aph@redhat.com>
 
 	* libgcj_bc.c (JvRunMainName): Declare.
